--- a/supplement/supplement-main.Rmd
+++ b/supplement/supplement-main.Rmd
@@ -200,12 +200,105 @@ main_model <- hc(train, blacklist=theory_bl, score="custom", fun=cog_model_score
 ```
 
 
+
+```{r, include=FALSE}
+# # can bootstrap strength of arcs for winning model approach, focus interpretations on strength of arcs / parameterizations
+
+set.seed(77267)
+
+# train_noise <- train %>%
+#   mutate_all(~.x+rnorm(n(),0,.002))
+if (!file.exists("../local/boot_res.rds")){
+  cl = parallel::makeCluster(detectCores(logical=TRUE))
+
+  clusterCall(cl,
+              function(){
+                source("../code/custom-structure-learning/cog-model-main.R", chdir=TRUE)
+                library(purrr)
+                }
+    )
+  
+  ## very slow!
+  boot_res <- boot.strength(
+    train,  #train
+    R = 200,
+    algorithm = "hc",
+    algorithm.args = list(score="custom", fun=cog_model_score_func, blacklist = theory_bl, maxp=5, max.iter=1e4),
+    cluster = cl
+    )
+  
+  stopCluster(cl)
+  
+  saveRDS(boot_res,"../local/boot_res.rds")
+} else {
+  boot_res <- readRDS("../local/boot_res.rds")
+}
+
+```
+
+
+```{r boot_strength_plot, echo=F, message=F, fig.cap="Bootstrapped confidence estimates for Bayesian network edges. Edge color indicates frequency with which edges appeared when conducting search across X bootstrap replicates. Only edges appearing in at least 20\\% of graphs are shown."}
+
+hyde_str <- df_to_hyde_string(boot_res %>% filter(strength>.2, direction>0) %>% select(from,to))
+h2 <- HydeNetwork(as.formula(hyde_str))
+# plot(h2)
+
+z2 <- custom_plot.HydeNetwork(h2)
+boot_res %>%
+  filter(direction>0, strength>.2) %>% 
+  # filter(parameter!="phi",parameter!="w_leak") %>%
+  # rename(from = parameter) %>%
+  # mutate(from = gsub("w_","",from)) %>%
+  mutate(strength = strength*direction) %>% 
+  select(to, from, strength) %>%
+  merge(z2$nodes_df %>% rename(from = label) %>% select(id, from), by="from") %>%
+  mutate(from = id) %>%
+  select(-id) %>%
+  merge(z2$nodes_df %>% rename(to = label) %>% select(id, to), by="to") %>%
+  mutate(to = id) %>%
+  arrange(to,from) -> edge_df_mod
+
+
+# z$nodes_df
+z2$nodes_df <- z2$nodes_df %>% mutate(label = recode_nodes(label))
+z2$nodes_df$fontname <- "Helvetica"
+z2$nodes_df$shape <- "ellipse"
+# z2$nodes_df$fillcolor <- ifelse(z2$nodes_df$id==13, "grey","white")
+z2$nodes_df$fixedsize <- FALSE
+z2$edges_df$penwidth <- abs(edge_df_mod$strength)*2
+z2$edges_df$penwidth <- 2
+# z$edges_df$label <- round(edge_df_mod$value,2)
+# z$edges_df$color <- ifelse(edge_df_mod$value > 0, "blue","red")
+z2$edges_df$color <- map_to_brewer(edge_df_mod$strength, bins=9, option="RdPu")
+# z2$edges_df$color <- map_to_viridis(edge_df_mod$strength, option="magma")
+
+render_graph(z2)
+```
+
+```{r}
+boot_graph_legend <- (tibble(
+  Probability = seq(min(edge_df_mod$strength), max(edge_df_mod$strength), length=11),
+) %>% 
+  ggplot(aes(y=1, x = Probability, fill = Probability)) +
+  geom_tile() +
+  scale_fill_distiller(palette="RdPu", direction=1)
+) %>% 
+  cowplot::get_legend()
+
+cowplot::ggdraw(boot_graph_legend)
+```
+
 ```{r, include=F}
 
 h <- HydeNetwork(as.formula(bnlearn_to_hyde_string(main_model)))
 
 c <- find_dag_coefs(main_model, train)
 ```
+
+```{r}
+boot_df <- boot_res %>% filter(strength>.2, direction>0)
+```
+
 
 ```{r main_model_plot, echo=F, fig.align='center', fig.cap="Bayesian network model of intuitive theory surrounding vaccination decisions. Edge color indicates the magnitude of the generative (blue) or preventive (red) coeffient for the links."}
 
@@ -272,7 +365,7 @@ z$nodes_df$shape <- "ellipse"
 z$nodes_df$fixedsize <- FALSE
 z$edges_df$penwidth <- abs(edge_df_mod$value)*2
 z$edges_df$penwidth <- 1.5
-# z$edges_df$label <- round(edge_df_mod$value,2)
+z$edges_df$label <- round(edge_df_mod$value,2)
 # z$edges_df$color <- ifelse(edge_df_mod$value > 0, "blue","red")
 z$edges_df$color <- map_to_brewer(edge_df_mod$value, option="RdBu")
 
@@ -295,93 +388,6 @@ main_graph_legend <- (tibble(
   cowplot::get_legend()
 
 cowplot::ggdraw(main_graph_legend)
-```
-
-
-```{r, include=FALSE}
-# # can bootstrap strength of arcs for winning model approach, focus interpretations on strength of arcs / parameterizations
-
-set.seed(77267)
-
-# train_noise <- train %>%
-#   mutate_all(~.x+rnorm(n(),0,.002))
-if (!file.exists("../local/boot_res.rds")){
-  cl = parallel::makeCluster(detectCores(logical=TRUE))
-
-  clusterCall(cl,
-              function(){
-                source("../code/custom-structure-learning/cog-model-main.R", chdir=TRUE)
-                library(purrr)
-                }
-    )
-  
-  ## very slow!
-  boot_res <- boot.strength(
-    train,  #train
-    R = 200,
-    algorithm = "hc",
-    algorithm.args = list(score="custom", fun=cog_model_score_func, blacklist = theory_bl, maxp=5, max.iter=1e4),
-    cluster = cl
-    )
-  
-  stopCluster(cl)
-  
-  saveRDS(boot_res,"../local/boot_res.rds")
-} else {
-  boot_res <- readRDS("../local/boot_res.rds")
-}
-
-```
-
-
-```{r boot_strength_plot, echo=F, message=F, fig.cap="Bootstrapped confidence estimates for Bayesian network edges. Edge color indicates frequency with which edges appeared when conducting search across X bootstrap replicates. Only edges appearing in at least 20\\% of graphs are shown."}
-
-hyde_str <- df_to_hyde_string(boot_res %>% filter(strength>.2, direction>0) %>% select(from,to))
-h2 <- HydeNetwork(as.formula(hyde_str))
-# plot(h2)
-
-z2 <- custom_plot.HydeNetwork(h2)
-boot_res %>%
-  filter(direction>0, strength>.2) %>% 
-  # filter(parameter!="phi",parameter!="w_leak") %>%
-  # rename(from = parameter) %>%
-  # mutate(from = gsub("w_","",from)) %>%
-  select(to, from, strength) %>%
-  merge(z2$nodes_df %>% rename(from = label) %>% select(id, from), by="from") %>%
-  mutate(from = id) %>%
-  select(-id) %>%
-  merge(z2$nodes_df %>% rename(to = label) %>% select(id, to), by="to") %>%
-  mutate(to = id) %>%
-  arrange(to,from) -> edge_df_mod
-
-
-# z$nodes_df
-z2$nodes_df <- z2$nodes_df %>% mutate(label = recode_nodes(label))
-z2$nodes_df$fontname <- "Helvetica"
-z2$nodes_df$shape <- "ellipse"
-# z2$nodes_df$fillcolor <- ifelse(z2$nodes_df$id==13, "grey","white")
-z2$nodes_df$fixedsize <- FALSE
-z2$edges_df$penwidth <- abs(edge_df_mod$strength)*2
-z2$edges_df$penwidth <- 2
-# z$edges_df$label <- round(edge_df_mod$value,2)
-# z$edges_df$color <- ifelse(edge_df_mod$value > 0, "blue","red")
-z2$edges_df$color <- map_to_brewer(edge_df_mod$strength, bins=9, option="RdPu")
-# z2$edges_df$color <- map_to_viridis(edge_df_mod$strength, option="magma")
-
-render_graph(z2)
-```
-
-```{r}
-boot_graph_legend <- (tibble(
-  Probability = seq(min(edge_df_mod$strength), max(edge_df_mod$strength), length=11),
-) %>% 
-  ggplot(aes(y=1, x = Probability, fill = Probability)) +
-  geom_tile() +
-  scale_fill_distiller(palette="RdPu", direction=1)
-) %>% 
-  cowplot::get_legend()
-
-cowplot::ggdraw(boot_graph_legend)
 ```
 
 
@@ -831,6 +837,53 @@ cor_val <- round(cor(obs_pred$predicted, obs_pred$observed),3)
 #   geom_errorbarh(height=0)
 ```
 
+```{r echo=F, fig.width=8, fig.height=4}
+## combined plot for paper
+library(patchwork)
+
+s2_diff_plot <- s2_scored %>% 
+  spread(phase, mean) %>% 
+  drop_na(scale) %>% 
+  mutate(diff = post-pre) %>% 
+  mutate(
+    scale = recode_nodes2(scale),
+    condition = ifelse(condition=="noInterv", "Control", "Disease Risk")
+    ) %>% 
+  group_by(condition, scale) %>%
+  summarize(M = mean(diff, na.rm=TRUE), se = sd(diff)/sqrt(n())) %>% 
+  ggplot(aes(x = reorder(scale,M), y = M, ymin = M-se*2, ymax=M+se*2, color=condition)) +
+  geom_pointrange(position=position_dodge(width=.25)) +
+  geom_hline(yintercept=0, linetype="dashed", color="grey") +
+  scale_color_manual(values=c("#0067b1","#c50024")) +
+  theme_bw(base_size=11) +
+  theme(
+    axis.text.x = element_text(angle=45, hjust=1),
+    panel.grid = element_blank(),
+    legend.position = c(.35,.9),
+    legend.direction = "horizontal",
+    aspect.ratio=.5
+    ) +
+  labs(title="A", y = "Mean difference", x = "Belief scale", color="Intervention")
+
+obs_pred <- make_pred_df(s2_mdf, base_model, "diseaseSevere")
+
+cor_val <- round(cor(obs_pred$predicted, obs_pred$observed),3)
+
+s2_obs_pred_plot <- obs_pred %>% # a bit of a hack
+  ggplot(aes(x=predicted, y = observed, ymin = ll, ymax=ul)) +
+  geom_abline(slope=1, intercept=0, linetype="dashed", alpha =.5) +
+  geom_errorbar( width=0, color="grey") +
+  geom_point(size=2.5) +
+  annotate(geom="text", x=.03, y=-.04, label= paste("r =", cor_val)) +
+  coord_cartesian(xlim=c(-.06,.06), ylim=c(-.06,.06)) +
+  theme_bw(base_size=11) +
+  theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+  theme(aspect.ratio = 1) +
+  labs(title = "B", y = "Observed change", x="Predicted change")
+
+s2_diff_plot + s2_obs_pred_plot + plot_layout(ncol=2, widths = c(2,1))
+```
+
 ## Studies 3a and 3b
 
 ```{r echo=F, message=F}
@@ -994,6 +1047,51 @@ cor_val <- round(cor(obs_pred$predicted, obs_pred$observed),3)
   theme(aspect.ratio = 1) +
   labs(title="Belief changes",subtitle="Experiment 3a & 3b")
 )
+```
+
+```{r fig.width=8, fig.height=4}
+s3_diff_plot <- s3_scored %>% 
+  # spread(phase, mean) %>% 
+  drop_na(scale) %>% 
+  mutate(diff = post-pre) %>% 
+  mutate(
+    scale = recode_nodes2(scale),
+    condition = ifelse(condition=="noInterv", "Control", "Disease Risk")
+    ) %>% 
+  group_by(condition, scale) %>%
+  summarize(M = mean(diff, na.rm=TRUE), se = sd(diff)/sqrt(n())) %>% 
+  ggplot(aes(x = reorder(scale,M), y = M, ymin = M-se*2, ymax=M+se*2, color=condition)) +
+  geom_pointrange(position=position_dodge(width=.25)) +
+  geom_hline(yintercept=0, linetype="dashed", color="grey") +
+  scale_color_manual(values=c("#0067b1","#c50024")) +
+  theme_bw(base_size=11) +
+  theme(
+    axis.text.x = element_text(angle=45, hjust=1),
+    panel.grid = element_blank(),
+    legend.position = c(.6,.15),
+    legend.direction = "horizontal",
+    aspect.ratio=.5
+    ) +
+  labs(title="A", y = "Mean difference", x = "Belief scale", color="Intervention")
+
+obs_pred <- make_pred_df(s3_mdf, base_model, "vaccTox")
+
+cor_val <- round(cor(obs_pred$predicted, obs_pred$observed),3)
+
+s3_obs_pred_plot <- obs_pred %>% 
+  ggplot(aes(x=predicted, y = observed, ymin = ll, ymax=ul)) +
+  geom_abline(slope=1, intercept=0, linetype="dashed", alpha =.5) +
+  geom_point(size=2.5) +
+  geom_errorbar(alpha=.5, width=0) +
+  # coord_fixed(ratio=1) +
+  coord_cartesian(xlim=c(-.12,.08), ylim=c(-.12,.08)) +
+  annotate(geom="text", x=.05, y=-.1, label= paste("r =", cor_val)) +
+  theme_bw(base_size=11) +
+  theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+  theme(aspect.ratio = 1) +
+  labs(title = "B", y = "Observed change", x="Predicted change")
+
+s3_diff_plot + s3_obs_pred_plot + plot_layout(ncol=2, widths = c(2,1))
 ```
 
 
@@ -1161,6 +1259,62 @@ cor_val <- round(cor(obs_pred$predicted, obs_pred$observed),3)
 
 ```
 
+
+```{r fig.width=8, fig.height=4}
+s4_diff_plot <- combined %>% 
+  filter(returned==TRUE, !is.na(vacc_news)) %>% # somehow 5? participants slippd by without answering 
+  mutate(diff = posttest-pretest) %>%
+  mutate(
+    vacc_news = as.factor(vacc_news),
+    scale = recode_nodes2(scale)
+    ) %>%
+  group_by(vacc_news,scale) %>%
+  summarize(
+    mean = mean(diff),
+    se = sd(diff)/sqrt(n()),
+    ul = mean + se,
+    ll = mean - se,
+    ul95 = mean + 1.96*se,
+    ll95 = mean - 1.96*se
+  ) %>%
+  ungroup() %>%
+  mutate(vacc_news = factor(vacc_news, c(1,0), labels=c("Yes","No"))) %>%
+  # mutate(phase = ordered(phase, levels=c("pretest","posttest"))) %>%
+  ggplot(aes(x=reorder(scale, mean), y = mean, ymin =ll, ymax=ul, color=vacc_news)) +
+  geom_point(position=position_dodge(width=.25), size=2, shape=16) +
+  geom_errorbar(position=position_dodge(width=.25), width=0, alpha=.8) +
+  # geom_errorbar(aes(ymin=ll95, ymax = ul95), width=0, position=position_dodge(width=.25), alpha=.5) +
+  geom_hline(yintercept = 0, linetype="dashed",alpha=.5) +
+  scale_color_manual(values=c("#0067b1","#c50024")) +
+  theme_bw(base_size=11) +
+  theme(
+    axis.text.x = element_text(angle=45, hjust=1),
+    panel.grid = element_blank(),
+    legend.position = c(.35,.85),
+    legend.direction = "horizontal",
+    aspect.ratio=.5
+    ) +
+  labs(title="A", y = "Mean difference", x = "Belief scale", color="News Exposure")
+
+obs_pred <- make_pred_df(s4_mdf, base_model, "vaccIntent")
+
+cor_val <- round(cor(obs_pred$predicted, obs_pred$observed),3)
+
+s4_obs_pred_plot <- obs_pred %>% # a bit of a hack
+  ggplot(aes(x=predicted, y = observed, ymin = ll, ymax=ul)) +
+  geom_abline(slope=1, intercept=0, linetype="dashed", alpha =.5) +
+  geom_point(size=2.5) +
+  geom_errorbar(alpha=.5, width=0) +
+  annotate(geom="text", x=.04, y=-.04, label= paste("r =", cor_val)) +
+  coord_cartesian(xlim=c(-.07,.06), ylim=c(-.07,.06)) +
+  theme_bw(base_size=11) +
+  theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+  theme(aspect.ratio = 1) +
+  labs(title = "B", y = "Observed change", x="Predicted change")
+
+s4_diff_plot + s4_obs_pred_plot + plot_layout(ncol=2, widths = c(2,1))
+```
+
 ## Participant demographic summary
 
 The table below presents demographic information for participants across all four studies.
@@ -1230,24 +1384,27 @@ df_demo <- s1_demo %>%
                           "Prefer not to say"
                           )
                    ),
+    income = str_replace_all(income, "\\$",""),
     income = ordered(income,
                      levels = c(
-                          "Less than $20,000",
-                          "$20,000 - $30,000",
-                          "$30,001 - $50,000",
-                          "$50,001 - $70,000",
-                          "$70,001 - $100,000",
-                          "More than $100,000",
+                          "Less than 20,000",
+                          "20,000 - 30,000",
+                          "30,001 - 50,000",
+                          "50,001 - 70,000",
+                          "70,001 - 100,000",
+                          "More than 100,000",
                           "Prefer not to say"
                           )
                      )
 
-  ) %>% 
+  ) %>%
   mutate(
     age = ifelse(age < 18,NA,age),
-    income = str_replace_all(income, "\\$",""),
+    # income = str_replace_all(income, "\\$",""),
     study = paste("Study", study)
-    ) 
+    )
+
+
 
 label(df_demo$sex) <- "Gender"
 label(df_demo$age) <- "Age"
@@ -1259,9 +1416,11 @@ label(df_demo$parent) <- "Parent?"
 
 # and create big table with table1 and t1kable()
 # trying wrapping with factor() to get it to print integer counts
-demographics_tbl <- table1::table1(~ factor(sex) + age + factor(race) + factor(religion) + factor(educ) + factor(income) + factor(parent)  | study, data=df_demo)
+# demographics_tbl <- table1::table1(~ factor(sex) + age + factor(race) + factor(religion) + factor(educ) + factor(income) + factor(parent)  | study, data=df_demo)
 
-table1::t1kable(demographics_tbl) %>% 
+demographics_tbl <- table1::table1(~ sex + age + race + religion + educ+ income + parent  | study, data=df_demo)
+
+table1::t1kable(demographics_tbl, booktabs = T) %>% 
   kable_classic(latex_options="scale_down")
 
 ```
